<resources
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="settings_notification_name" translatable="false">Daily Cleaner Notification.</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-5294151573817700/7844185090</string>
    <string name="settings_notification_sum">Shows notification of how much data was cleaned daily.</string>
    <string name="app_description">The last Android Cleaner you will ever need with Google inspired material design made by D4rK to be more simplistic and easy to use!</string>
    <string name="app_name" translatable="false">Cleaner</string>
    <string name="app_d4rk" translatable="false">D4rK!</string>
    <string name="copyright" translatable="false">Copyright ©2021 ~ D4rK</string>
    <string name="atmegame" translatable="false">Atmegame!</string>
    <string name="empty" translatable="false"/>
    <string name="button_clean" translatable="false">CLEAN</string>
    <string name="button_default" translatable="false">DEFAULT</string>
    <string name="button_saf" translatable="false">TRY SAF</string>
    <string name="button_select" translatable="false">SELECT</string>
    <string name="common_google_play_services_unknown_issue" translatable="false">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="consent_agree" translatable="false">By agreeing, you confirm that you would like a personalized ad experience.</string>
    <string name="consent_no" translatable="false">NO, THANK YOU</string>
    <string name="consent_understand" translatable="false">I understand that I will still see ads, but they may not be as relevant to my interests.</string>
    <string name="consent_yes" translatable="false">YES, I AGREE</string>
    <string name="dialog_message" translatable="false">Are you sure you want to leave the app?</string>
    <string name="dialog_no" translatable="false">NO</string>
    <string name="dialog_yes" translatable="false">YES</string>
    <string name="interstitialId" translatable="false">ca-app-pub-7124948529897131/8974891991</string>
    <string name="menu_consent" translatable="false">Ads</string>
    <string name="menu_policy" translatable="false">Privacy Policy</string>
    <string name="s1" translatable="false">Save image</string>
    <string name="s2" translatable="false">Allow Ad to store image in Picture gallery?</string>
    <string name="s3" translatable="false">Accept</string>
    <string name="s4" translatable="false">Decline</string>
    <string name="s5" translatable="false">Create calendar event</string>
    <string name="s6" translatable="false">Allow Ad to create a calendar event?</string>
    <string name="s7" translatable="false">Test Ad</string>
    <string name="search_menu_title" translatable="false">Search</string>
    <string name="status_bar_notification_info_overflow" translatable="false">999+</string>
    <string name="text_ads" translatable="false">Ads</string>
    <string name="advanced_empty_folder_title" translatable="false">Advanced Empty Folder Cleaner!</string>
    <string name="advanced_empty_folder_saf_title" translatable="false">SAF Empty Folder Cleaner!</string>
    <string name="text_afc" translatable="false">Download Auto Folder Cleaner to easily schedule automatic folder deletion.</string>
    <string name="text_bfc" translatable="false">Download Big File Cleaner to easily find and remove big files on your device.</string>
    <string name="text_cleared" translatable="false">Deleted %d folders!</string>
    <string name="text_consent" translatable="false">&lt;h2&gt;Personalize Your Ad Experience&lt;/h2&gt;This app personalizes your advertising experience using AdMob. AdMob and its &lt;a href=\'https://support.google.com/admob/answer/9012903\'&gt;partners&lt;/a&gt; may collect and process personal data such as device identifiers, location data, and other demographic and interest data to provide advertising experience tailored to you. By consenting to this improved ad experience, you\'ll see ads that AdMob and its partners believe are more relevant to you. &lt;a href=\'https://policies.google.com/technologies/partner-sites?gl=uk\'&gt;Learn more.&lt;/a&gt;</string>
    <string name="text_deleted" translatable="false">Deleted: </string>
    <string name="text_dfc" translatable="false">Download Duplicate File Cleaner to easily find and remove duplicate files on your device.</string>
    <string name="text_info" translatable="false">Select path and click CLEAN to delete all empty folders and subfolders!</string>
    <string name="text_information" translatable="false">Information</string>
    <string name="text_missing" translatable="false">Folder missing!</string>
    <string name="text_more" translatable="false">More</string>
    <string name="text_no_empy_subfolders" translatable="false">No empty subfolders!</string>
    <string name="text_no_folder" translatable="false">Folder not found!</string>
    <string name="text_path" translatable="false">Path</string>
    <string name="text_path_info" translatable="false">Click the button SELECT and allow access to the folder you want to scan!</string>
    <string name="text_permission_granted" translatable="false">Permission granted!</string>
    <string name="text_permission_not_granted" translatable="false">Permission not granted!</string>
    <string name="text_saf" translatable="false">SAF (Storage Access Framework) is a new method of accessing the storage of your device. In future versions of Android (11 and higher) Google is blocking the old way and this is the only supported way for now. You can try it now. It\'s a bit slower but you gain folder picker, external storage support and future technology support.</string>
    <string name="text_saf_title" translatable="false">Using SAF</string>
    <string name="text_working" translatable="false">Working… This may take some time…</string>
    <string name="text_working_count" translatable="false">Working… Scanning folders… %d/%d</string>
    <string name="toast_bad_folder_path" translatable="false">First SELECT a folder!</string>
    <string name="toast_no_folder" translatable="false">No folder selected!</string>
    <string name="about_app_version_code" translatable="false" tools:ignore="Typos">6.1_release5</string>
    <string name="about_supporters" translatable="false">UnderPenis69/UnderBenis96, Sonerie C8chilu\' dă Haur a.k.a Băiatu\' Pocnitoare (fostă petardă de elită pă vremea lu\' Ștefan cel Mare), Wiss Kill, YoYo, Auroșu Roșu.</string>
    <string name="about_gamejolt" translatable="false">GameJolt.</string>
    <string name="about_twitter" translatable="false">Twitter.</string>
    <string name="about_desene_animate" translatable="false">Desene Animate!</string>
    <string name="about_deviantart" translatable="false">DeviantArt.</string>
    <string name="default_theme_switcher" translatable="false">MODE_NIGHT_FOLLOW_SYSTEM</string>
    <string name="main_progress_0" translatable="false">0%</string>
    <string name="main_progress_100" translatable="false">100%</string>
    <string name="daily_sum">Automatically runs daily, without you having to open the app.</string>
    <string name="action_stop" translatable="false">Stop.</string>
    <string name="dialog_confirm_clean_message" translatable="false" tools:ignore="PluralsCandidate">Do you want to remove %d selected item(s) from MediaStore? This operation cannot be reverted.</string>
    <string name="dialog_finished_clean_message" translatable="false" tools:ignore="PluralsCandidate">%d item(s) have been removed from MediaStore.</string>
    <string name="button_positions">This feature is still under development so be careful. If you encounter any bug report it immediately to be fixed and moved from experimental stage.</string>
    <string name="about_changelog">Changelog!</string>
    <string name="main_status">Status: Idle…</string>
    <string name="permission_needed">Permission needed!</string>
    <string name="invalid_no_result">No result…</string>
    <string name="invalid_media_cleaner">Invalid Media Cleaner!</string>
    <string name="invalid_media_cleaner_clean_tooltip">Check and decide what invalid media files you want to clean.</string>
    <string name="assistant_title">System Assistant App</string>
    <string name="clean_confirm_title">Confirm cleaning?</string>
    <string name="adds_the_following">Adds the following filters:</string>
    <string name="warning">Warning!</string>
    <string name="assistant_content">Set this app as the system assistant app &amp; use it by long-pressing the home button or swiping from the bottom corners.</string>
    <string name="main_status_running">Status: Running.</string>
    <string name="title_activity_prompt">Prompt Activity!</string>
    <string name="service_channel_name">Clipboard Cleaner notification channel!</string>
    <string name="service_notif_title">Your clipboard is under the protection!</string>
    <string name="double_check_title">Double checker.</string>
    <string name="double_check_sum">Will rerun scan each time something is found with a limit of ten scans.</string>
    <string name="dialog_finished_clean_title">Finished.</string>
    <string name="daily_title">Daily Clean.</string>
    <string name="main_found">Found: </string>
    <string name="main_freed">Freed: </string>
    <string name="action_scan">Start scan!</string>
    <string name="action_reset">Reset.</string>
    <string name="theme">Theme.</string>
    <string name="try_right_now">Try right now!</string>
    <string name="assistant_open_settings">Open assistant settings</string>
    <string name="navigation_drawer_clipboard_cleaner">Clipboard Cleaner!</string>
    <string name="clipboard_status">Status: %s</string>
    <string name="disabled">Disabled.</string>
    <string name="filters_string">Filters:</string>
    <string name="filters_generic_filter">Generic filter.</string>
    <string name="filters_generic_filter_description">Delete temp, log, logs, &amp; other useless files &amp; folders.</string>
    <string name="filters_aggressive_filter">Aggressive filter.</string>
    <string name="filters_aggressive_filter_description">Too much to list here &amp; I\'m too lazy to add stuff here. Sorry.</string>
    <string name="filters_delete_empty_folders">Delete empty folders.</string>
    <string name="filters_corpse_files">Delete corpse files.</string>
    <string name="filters_corpse_files_description">Files left over from uninstalled/removed apps.</string>
    <string name="filters_delete_apk_files">Delete APK files.</string>
    <string name="filters_delete_apk_files_description">Installer files (.apk) files for Android.</string>
    <string name="filters_auto_whitelist">Auto whitelist.</string>
    <string name="filters_auto_whitelist_description">Detect folders that should be protected automatically.</string>
    <string name="miscellaneous_string">Miscellaneous:</string>
    <string name="miscellaneous_one_click_clean">One click clean.</string>
    <string name="miscellaneous_one_click_clean_description">No dialog menu when clicking clean button.</string>
    <string name="miscellaneous_about">About.</string>
    <string name="about_github_link">GitHub link.</string>
    <string name="about_developer">Developer:</string>
    <string name="about_app_version">App version:</string>
    <string name="about_special_thanks">Special thanks:</string>
    <string name="about_privacy_policy">Privacy Policy.</string>
    <string name="true_aggressive_filter">True aggressive filter!</string>
    <string name="true_aggressive_filer_description"><b>Warning!!!</b> This filter delete every file type is in your device like <b>documents</b>, <b>photos</b>, <b>videos</b>, <b>folders</b> &amp; more! I\'m not responsible for anything, use at your own risk.</string>
</resources>